# AdventOfCode2022

./: .gitignore  CMakeLists.txt  main.cpp
Common/: TextBanners.hpp  Vector.hpp
Day01/: CalorieCounting.h
Day02/: RockPaperScissors.h
Day03/: RucksackReorganisation.h
Day1/: CalorieCounting.h
Day2/: RockPaperScissors.h
Day3/: RucksackReorganisation.h
Day4/: CampCleanup.h
Day5/: SupplyStacks.h
Day6/: TuningTrouble.h
Day7/: Directory.h  NoSpaceLeftOnDevice.h  Terminal.h
Day8/: HeightMap.hpp  TreeMap.hpp  TreeTopTreehouse.hpp
Day9/: Rope.hpp  RopeBridge.hpp  RopeSimulator.cpp
TaskInputs/: day5_start.txt
